--- a/docs/latex/_graph_algorithms_8h_source.tex
+++ b/docs/latex/_graph_algorithms_8h_source.tex
@@ -11,34 +11,34 @@
 \DoxyCodeLine{00007\ }
 \DoxyCodeLine{00008\ \textcolor{keyword}{namespace\ }\mbox{\hyperlink{namespace_graph_algorithms}{GraphAlgorithms}}\ \{}
 \DoxyCodeLine{00009\ }
-\DoxyCodeLine{00020\ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{namespace_graph_algorithms_ad7539f73539ad028603834297e92f262}{relax}}(\mbox{\hyperlink{class_edge}{Edge<LocationInfo>}}\ *edge,\ \textcolor{keywordtype}{bool}\ isDriving\ =\ \textcolor{keyword}{true});}
-\DoxyCodeLine{00021\ }
-\DoxyCodeLine{00038\ std::vector<LocationInfo>}
-\DoxyCodeLine{00039\ \mbox{\hyperlink{namespace_graph_algorithms_a8221d490ee511e486db5a6d46a0d6f52}{dijkstra}}(\mbox{\hyperlink{class_graph}{Graph<LocationInfo>}}\ *graph,\ \textcolor{keywordtype}{int}\ source,\ \textcolor{keywordtype}{int}\ dest,}
-\DoxyCodeLine{00040\ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ std::vector<int>\ \&avoidNodes,}
-\DoxyCodeLine{00041\ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ std::vector<std::pair<int,\ int>>\ \&avoidSegments,\ \textcolor{keywordtype}{bool}\ isDriving);}
-\DoxyCodeLine{00042\ }
-\DoxyCodeLine{00056\ std::vector<LocationInfo>\ \mbox{\hyperlink{namespace_graph_algorithms_ad0b355dbc6ee4505261170b7807be1df}{getPath}}(\mbox{\hyperlink{class_graph}{Graph<LocationInfo>}}\ *g,\ \textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ \&origin,}
-\DoxyCodeLine{00057\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ \&dest,\ \textcolor{keywordtype}{bool}\ isDriving);}
-\DoxyCodeLine{00058\ }
-\DoxyCodeLine{00075\ std::vector<LocationInfo>}
-\DoxyCodeLine{00076\ \mbox{\hyperlink{namespace_graph_algorithms_acf21e304ba607a6083cc3faa09cf8bfc}{drivingRoute}}(\mbox{\hyperlink{class_graph}{Graph<LocationInfo>}}\ *graph,\ \textcolor{keywordtype}{int}\ source,\ \textcolor{keywordtype}{int}\ dest,}
-\DoxyCodeLine{00077\ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ std::vector<int>\ \&avoidNodes,}
-\DoxyCodeLine{00078\ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ std::vector<std::pair<int,\ int>>\ \&avoidSegments,}
-\DoxyCodeLine{00079\ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ includeNode\ =\ -\/1);}
-\DoxyCodeLine{00080\ }
-\DoxyCodeLine{00094\ std::vector<std::pair<Vertex<LocationInfo>\ *,\ std::vector<LocationInfo>>>}
-\DoxyCodeLine{00095\ \mbox{\hyperlink{namespace_graph_algorithms_ae93c882ba57501977a06f6cd052c2389}{getParkingNodes}}(\mbox{\hyperlink{class_graph}{Graph<LocationInfo>}}\ *graph,\ \textcolor{keywordtype}{int}\ source,}
-\DoxyCodeLine{00096\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ std::vector<int>\ \&avoidNodes,}
-\DoxyCodeLine{00097\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ std::vector<std::pair<int,\ int>>\ \&avoidSegments);}
-\DoxyCodeLine{00098\ }
-\DoxyCodeLine{00116\ std::vector<EnvironmentalPath>}
-\DoxyCodeLine{00117\ \mbox{\hyperlink{namespace_graph_algorithms_a3c3c493521b7bbdf877a4178b6e82a09}{environmentalRoute}}(\mbox{\hyperlink{class_graph}{Graph<LocationInfo>}}\ *graph,\ \textcolor{keywordtype}{int}\ source,\ \textcolor{keywordtype}{int}\ dest,}
-\DoxyCodeLine{00118\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{double}\ maxWalkingTime,\ \textcolor{keyword}{const}\ std::vector<int>\ \&avoidNodes,}
-\DoxyCodeLine{00119\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ std::vector<std::pair<int,\ int>>\ \&avoidSegments);}
-\DoxyCodeLine{00120\ }
-\DoxyCodeLine{00121\ \}\ \textcolor{comment}{//\ namespace\ GraphAlgorithms}}
-\DoxyCodeLine{00122\ }
-\DoxyCodeLine{00123\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//\ GRAPH\_ALGORITHMS\_H}}
+\DoxyCodeLine{00021\ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{namespace_graph_algorithms_ad7539f73539ad028603834297e92f262}{relax}}(\mbox{\hyperlink{class_edge}{Edge<LocationInfo>}}\ *edge,\ \textcolor{keywordtype}{bool}\ isDriving\ =\ \textcolor{keyword}{true});}
+\DoxyCodeLine{00022\ }
+\DoxyCodeLine{00039\ std::vector<LocationInfo>}
+\DoxyCodeLine{00040\ \mbox{\hyperlink{namespace_graph_algorithms_a8221d490ee511e486db5a6d46a0d6f52}{dijkstra}}(\mbox{\hyperlink{class_graph}{Graph<LocationInfo>}}\ *graph,\ \textcolor{keywordtype}{int}\ source,\ \textcolor{keywordtype}{int}\ dest,}
+\DoxyCodeLine{00041\ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ std::vector<int>\ \&avoidNodes,}
+\DoxyCodeLine{00042\ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ std::vector<std::pair<int,\ int>>\ \&avoidSegments,\ \textcolor{keywordtype}{bool}\ isDriving);}
+\DoxyCodeLine{00043\ }
+\DoxyCodeLine{00057\ std::vector<LocationInfo>\ \mbox{\hyperlink{namespace_graph_algorithms_ad0b355dbc6ee4505261170b7807be1df}{getPath}}(\mbox{\hyperlink{class_graph}{Graph<LocationInfo>}}\ *g,\ \textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ \&origin,}
+\DoxyCodeLine{00058\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ \&dest,\ \textcolor{keywordtype}{bool}\ isDriving);}
+\DoxyCodeLine{00059\ }
+\DoxyCodeLine{00079\ std::vector<LocationInfo>}
+\DoxyCodeLine{00080\ \mbox{\hyperlink{namespace_graph_algorithms_acf21e304ba607a6083cc3faa09cf8bfc}{drivingRoute}}(\mbox{\hyperlink{class_graph}{Graph<LocationInfo>}}\ *graph,\ \textcolor{keywordtype}{int}\ source,\ \textcolor{keywordtype}{int}\ dest,}
+\DoxyCodeLine{00081\ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ std::vector<int>\ \&avoidNodes,}
+\DoxyCodeLine{00082\ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ std::vector<std::pair<int,\ int>>\ \&avoidSegments,}
+\DoxyCodeLine{00083\ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ includeNode\ =\ -\/1);}
+\DoxyCodeLine{00084\ }
+\DoxyCodeLine{00098\ std::vector<std::pair<Vertex<LocationInfo>\ *,\ std::vector<LocationInfo>>>}
+\DoxyCodeLine{00099\ \mbox{\hyperlink{namespace_graph_algorithms_ae93c882ba57501977a06f6cd052c2389}{getParkingNodes}}(\mbox{\hyperlink{class_graph}{Graph<LocationInfo>}}\ *graph,\ \textcolor{keywordtype}{int}\ source,}
+\DoxyCodeLine{00100\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ std::vector<int>\ \&avoidNodes,}
+\DoxyCodeLine{00101\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ std::vector<std::pair<int,\ int>>\ \&avoidSegments);}
+\DoxyCodeLine{00102\ }
+\DoxyCodeLine{00121\ std::vector<EnvironmentalPath>}
+\DoxyCodeLine{00122\ \mbox{\hyperlink{namespace_graph_algorithms_ad85786700be21b72b89c949011473d74}{drivingWalkingRoute}}(\mbox{\hyperlink{class_graph}{Graph<LocationInfo>}}\ *graph,\ \textcolor{keywordtype}{int}\ source,\ \textcolor{keywordtype}{int}\ dest,}
+\DoxyCodeLine{00123\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{double}\ maxWalkingTime,\ \textcolor{keyword}{const}\ std::vector<int>\ \&avoidNodes,}
+\DoxyCodeLine{00124\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ std::vector<std::pair<int,\ int>>\ \&avoidSegments);}
+\DoxyCodeLine{00125\ }
+\DoxyCodeLine{00126\ \}\ \textcolor{comment}{//\ namespace\ GraphAlgorithms}}
+\DoxyCodeLine{00127\ }
+\DoxyCodeLine{00128\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//\ GRAPH\_ALGORITHMS\_H}}
 
 \end{DoxyCode}
