--- a/docs/latex/_input_parser_8h.tex
+++ b/docs/latex/_input_parser_8h.tex
@@ -1,5 +1,6 @@
 \doxysection{/\+Users/simaobarbosa/\+Developer/feup/da/project/code/\+Input\+Parser.h File Reference}
 \hypertarget{_input_parser_8h}{}\label{_input_parser_8h}\index{/Users/simaobarbosa/Developer/feup/da/project/code/InputParser.h@{/Users/simaobarbosa/Developer/feup/da/project/code/InputParser.h}}
+{\ttfamily \#include $<$algorithm$>$}\newline
 {\ttfamily \#include $<$string$>$}\newline
 {\ttfamily \#include $<$utility$>$}\newline
 {\ttfamily \#include $<$vector$>$}\newline
