--- a/docs/latex/_input_parser_8h_source.tex
+++ b/docs/latex/_input_parser_8h_source.tex
@@ -5,14 +5,15 @@
 \DoxyCodeLine{00001\ \textcolor{preprocessor}{\#ifndef\ INPUTPARSER\_HPP}}
 \DoxyCodeLine{00002\ \textcolor{preprocessor}{\#define\ INPUTPARSER\_HPP}}
 \DoxyCodeLine{00003\ }
-\DoxyCodeLine{00004\ \textcolor{preprocessor}{\#include\ <string>}}
-\DoxyCodeLine{00005\ \textcolor{preprocessor}{\#include\ <utility>}}
-\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#include\ <vector>}}
-\DoxyCodeLine{00007\ }
-\DoxyCodeLine{00012\ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_input_parser}{InputParser}}\ \{}
-\DoxyCodeLine{00013\ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00024\ \ \ std::vector<int>\ \mbox{\hyperlink{class_input_parser_a2521ffcecd6de13bab9345729add6c86}{parseNodes}}(\textcolor{keyword}{const}\ std::string\ \&input);}
-\DoxyCodeLine{00025\ }
+\DoxyCodeLine{00004\ \textcolor{preprocessor}{\#include\ <algorithm>}}
+\DoxyCodeLine{00005\ \textcolor{preprocessor}{\#include\ <string>}}
+\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#include\ <utility>}}
+\DoxyCodeLine{00007\ \textcolor{preprocessor}{\#include\ <vector>}}
+\DoxyCodeLine{00008\ }
+\DoxyCodeLine{00013\ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_input_parser}{InputParser}}\ \{}
+\DoxyCodeLine{00014\ \textcolor{keyword}{public}:}
+\DoxyCodeLine{00025\ \ \ std::vector<int>\ \mbox{\hyperlink{class_input_parser_a2521ffcecd6de13bab9345729add6c86}{parseNodes}}(\textcolor{keyword}{const}\ std::string\ \&input);}
+\DoxyCodeLine{00026\ }
 \DoxyCodeLine{00037\ \ \ std::vector<std::pair<int,\ int>>\ \mbox{\hyperlink{class_input_parser_ae2a0eab04ef36dcd5498149e94584be7}{parseSegments}}(\textcolor{keyword}{const}\ std::string\ \&input);}
 \DoxyCodeLine{00038\ \};}
 \DoxyCodeLine{00039\ }
