--- a/docs/latex/class_input_parser.tex
+++ b/docs/latex/class_input_parser.tex
@@ -32,7 +32,7 @@ std\+::vector$<$ int $>$ Input\+Parser\+::parse\+Nodes (\begin{DoxyParamCaption}
 
 Parses a string of integers into a vector of nodes. 
 
-The input string should contain integers separated by spaces. The algorithm iterates through the input string once, making it linear in complexity.
+The input string should contain integers separated by spaces. The algorithm iterates through the input string once, making it\textquotesingle{}s complexity O(n), where n is the number of integers.
 
 
 \begin{DoxyParams}{Parameters}
@@ -52,7 +52,7 @@ std\+::vector$<$ std\+::pair$<$ int, int $>$ $>$ Input\+Parser\+::parse\+Segment
 
 Parses a string of segments into a vector of pairs of integers. 
 
-The input string should contain segments in the format "{}(x,y)"{}, separated by spaces or other delimiters. The algorithm processes each segment in the input string, making it linear in complexity relative to the number of segments.
+The input string should contain segments in the format "{}(x,y)"{}, separated by spaces or other delimiters. The algorithm processes each segment in the input string, making its complexity O(m), where m is the number of segments.
 
 
 \begin{DoxyParams}{Parameters}
