--- a/docs/latex/class_vertex.tex
+++ b/docs/latex/class_vertex.tex
@@ -16,56 +16,56 @@ T \mbox{\hyperlink{class_vertex_a48eae2f7af2362634adab02b7b2dbec6}{get\+Info}} (
 std\+::vector$<$ \mbox{\hyperlink{class_edge}{Edge}}$<$ T $>$ \texorpdfstring{$\ast$}{*} $>$ \mbox{\hyperlink{class_vertex_a0010a7d0b7db1bb81dd2ebb1ffae650a}{get\+Adj}} () const
 \begin{DoxyCompactList}\small\item\em Gets the adjacency list of the vertex. \end{DoxyCompactList}\item 
 bool \mbox{\hyperlink{class_vertex_aa2bb17f6ebd98a67f8da1f689b22fadc}{is\+Visited}} () const
-\begin{DoxyCompactList}\small\item\em Checks if the vertex has been visited. \end{DoxyCompactList}\item 
+\item 
 bool \mbox{\hyperlink{class_vertex_aaa41dfa4ce1a19b4e529cc6cdc23b764}{is\+Processing}} () const
-\begin{DoxyCompactList}\small\item\em Checks if the vertex is being processed. \end{DoxyCompactList}\item 
+\item 
 unsigned int \mbox{\hyperlink{class_vertex_a25642875df28caa2195bad5a9ae44683}{get\+Indegree}} () const
-\begin{DoxyCompactList}\small\item\em Gets the indegree of the vertex. \end{DoxyCompactList}\item 
+\item 
 double \mbox{\hyperlink{class_vertex_ae642291c25c5ca6764c70fada4b05244}{get\+Driving\+Dist}} () const
-\begin{DoxyCompactList}\small\item\em Gets the driving distance of the vertex. \end{DoxyCompactList}\item 
+\item 
 double \mbox{\hyperlink{class_vertex_a2db8aed85b74ff54eb18d0734b6337c4}{get\+Walking\+Dist}} () const
-\begin{DoxyCompactList}\small\item\em Gets the walking distance of the vertex. \end{DoxyCompactList}\item 
+\item 
 \mbox{\hyperlink{class_edge}{Edge}}$<$ T $>$ \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{class_vertex_a15e4ff95fba2bb5970a6551137ceb950}{get\+Path}} () const
-\begin{DoxyCompactList}\small\item\em Gets the path edge of the vertex. \end{DoxyCompactList}\item 
+\item 
 std\+::vector$<$ \mbox{\hyperlink{class_edge}{Edge}}$<$ T $>$ \texorpdfstring{$\ast$}{*} $>$ \mbox{\hyperlink{class_vertex_a361d7d0459d37aead6401d6af9f81f0a}{get\+Incoming}} () const
-\begin{DoxyCompactList}\small\item\em Gets the incoming edges of the vertex. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{class_vertex_a31cd60c26640f8072a928ba70eb2f95e}{set\+Info}} (T \mbox{\hyperlink{class_vertex_a415d7811eef6cdd992f0dca1f35a49cd}{info}})
-\begin{DoxyCompactList}\small\item\em Sets the information stored in the vertex. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{class_vertex_a95a3f3c55f2ba371fae51d3fe0e76c23}{set\+Visited}} (bool \mbox{\hyperlink{class_vertex_a187a2fe4ff50261cf3c15b8cda7dfc56}{visited}})
-\begin{DoxyCompactList}\small\item\em Sets the visited status of the vertex. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{class_vertex_a5ccb6f7215c915afdbcbdb81ad70a408}{set\+Processing}} (bool \mbox{\hyperlink{class_vertex_ae575d4b9a6b1ada3f9626c458c060f54}{processing}})
-\begin{DoxyCompactList}\small\item\em Sets the processing status of the vertex. \end{DoxyCompactList}\item 
+\item 
 int \mbox{\hyperlink{class_vertex_a3b8e12b4d9805979321212dd6db05961}{get\+Low}} () const
-\begin{DoxyCompactList}\small\item\em Gets the low value of the vertex. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{class_vertex_a62acec2c4fcbec56e995974b91444ec9}{set\+Low}} (int value)
-\begin{DoxyCompactList}\small\item\em Sets the low value of the vertex. \end{DoxyCompactList}\item 
+\item 
 int \mbox{\hyperlink{class_vertex_ab2916c006fa35b918910a2232095e785}{get\+Num}} () const
-\begin{DoxyCompactList}\small\item\em Gets the num value of the vertex. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{class_vertex_ab3f9026ba6cbd11243ab484a856c6581}{set\+Num}} (int value)
-\begin{DoxyCompactList}\small\item\em Sets the num value of the vertex. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{class_vertex_af9c4caaac19bdaae5a88a7a671639b59}{set\+Indegree}} (unsigned int \mbox{\hyperlink{class_vertex_af5db7e2f035a38dcc7c6e1b03117b06a}{indegree}})
-\begin{DoxyCompactList}\small\item\em Sets the indegree of the vertex. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{class_vertex_ac1061c96d8da11305891e6d2eb7c5f88}{set\+Driving\+Dist}} (double dd)
-\begin{DoxyCompactList}\small\item\em Sets the driving distance of the vertex. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{class_vertex_a8b06e527931e3c29f5ee5e04623dfe04}{set\+Walking\+Dist}} (double wd)
-\begin{DoxyCompactList}\small\item\em Sets the walking distance of the vertex. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{class_vertex_a5ebf4b550ec94b89a8f80df1a53cc97d}{set\+Path}} (\mbox{\hyperlink{class_edge}{Edge}}$<$ T $>$ \texorpdfstring{$\ast$}{*}\mbox{\hyperlink{class_vertex_abfc6d8f64308c47901c72d5ebceda80e}{path}})
-\begin{DoxyCompactList}\small\item\em Sets the path edge of the vertex. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{class_vertex_a25c8a30731d8c1bfa3253f0688819820}{set\+Queue\+Index}} (int idx)
-\begin{DoxyCompactList}\small\item\em Sets the queue index of the vertex. \end{DoxyCompactList}\item 
+\item 
 \mbox{\hyperlink{class_edge}{Edge}}$<$ T $>$ \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{class_vertex_a78575fa98a94d622a0f86ba112139539}{add\+Edge}} (\mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$ \texorpdfstring{$\ast$}{*}dest, double dw, double ww)
 \begin{DoxyCompactList}\small\item\em Adds an edge from this vertex to the destination vertex. This operation has constant time complexity. \end{DoxyCompactList}\item 
 bool \mbox{\hyperlink{class_vertex_ac1f1dd0a8e1019a242f1120d6559c754}{remove\+Edge}} (T in)
 \begin{DoxyCompactList}\small\item\em Removes an edge from this vertex to a vertex with the given info. This operation has a time complexity of O(\+E), where E is the number of edges in the adjacency list. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{class_vertex_a414ce58fdf35ee5200a82912f3865506}{remove\+Outgoing\+Edges}} ()
-\begin{DoxyCompactList}\small\item\em Removes all outgoing edges from this vertex. This operation has a time complexity of O(\+E), where E is the number of outgoing edges. \end{DoxyCompactList}\item 
+\item 
 int \mbox{\hyperlink{class_vertex_ac83e9238e2f4c54b46c77a409f44c769}{get\+Queue\+Index}} () const
-\begin{DoxyCompactList}\small\item\em Gets the queue index of the vertex. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 \doxysubsubsection*{Protected Member Functions}
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{class_vertex_a622503fe44ef12d5c39bd1043d47865c}{delete\+Edge}} (\mbox{\hyperlink{class_edge}{Edge}}$<$ T $>$ \texorpdfstring{$\ast$}{*}edge)
-\begin{DoxyCompactList}\small\item\em Deletes an edge from the vertex. This operation has a time complexity of O(\+E), where E is the number of incoming edges of the destination vertex. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 \doxysubsubsection*{Protected Attributes}
 \begin{DoxyCompactItemize}
 \item 
@@ -125,7 +125,7 @@ Constructor for the \doxylink{class_vertex}{Vertex} class.
 \doxysubsubsection{\texorpdfstring{addEdge()}{addEdge()}}
 {\footnotesize\ttfamily \label{class_vertex_a78575fa98a94d622a0f86ba112139539} 
 template$<$class T$>$ \\
-\mbox{\hyperlink{class_edge}{Edge}}$<$ T $>$ \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::add\+Edge (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$ \texorpdfstring{$\ast$}{*}}]{d}{, }\item[{double}]{dw}{, }\item[{double}]{ww}{}\end{DoxyParamCaption})}
+\mbox{\hyperlink{class_edge}{Edge}}$<$ T $>$ \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::add\+Edge (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$ \texorpdfstring{$\ast$}{*}}]{dest}{, }\item[{double}]{dw}{, }\item[{double}]{ww}{}\end{DoxyParamCaption})}
 
 
 
@@ -133,7 +133,7 @@ Adds an edge from this vertex to the destination vertex. This operation has cons
 
 
 \begin{DoxyParams}{Parameters}
-{\em d} & Destination vertex. \\
+{\em dest} & Destination vertex. \\
 \hline
 {\em dw} & Driving weight of the edge. \\
 \hline
@@ -150,15 +150,6 @@ Pointer to the created edge.
 template$<$class T$>$ \\
 void \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::delete\+Edge (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{class_edge}{Edge}}$<$ T $>$ \texorpdfstring{$\ast$}{*}}]{edge}{}\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [protected]}}
 
-
-
-Deletes an edge from the vertex. This operation has a time complexity of O(\+E), where E is the number of incoming edges of the destination vertex. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em edge} & \doxylink{class_edge}{Edge} to delete. \\
-\hline
-\end{DoxyParams}
 \Hypertarget{class_vertex_a0010a7d0b7db1bb81dd2ebb1ffae650a}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!getAdj@{getAdj}}
 \index{getAdj@{getAdj}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{getAdj()}{getAdj()}}
@@ -180,13 +171,6 @@ Adjacency list of the vertex.
 template$<$class T$>$ \\
 double \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::get\+Driving\+Dist (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption}) const}
 
-
-
-Gets the driving distance of the vertex. 
-
-\begin{DoxyReturn}{Returns}
-Driving distance of the vertex. 
-\end{DoxyReturn}
 \Hypertarget{class_vertex_a361d7d0459d37aead6401d6af9f81f0a}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!getIncoming@{getIncoming}}
 \index{getIncoming@{getIncoming}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{getIncoming()}{getIncoming()}}
@@ -194,13 +178,6 @@ Driving distance of the vertex.
 template$<$class T$>$ \\
 std\+::vector$<$ \mbox{\hyperlink{class_edge}{Edge}}$<$ T $>$ \texorpdfstring{$\ast$}{*} $>$ \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::get\+Incoming (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption}) const}
 
-
-
-Gets the incoming edges of the vertex. 
-
-\begin{DoxyReturn}{Returns}
-Incoming edges of the vertex. 
-\end{DoxyReturn}
 \Hypertarget{class_vertex_a25642875df28caa2195bad5a9ae44683}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!getIndegree@{getIndegree}}
 \index{getIndegree@{getIndegree}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{getIndegree()}{getIndegree()}}
@@ -208,13 +185,6 @@ Incoming edges of the vertex.
 template$<$class T$>$ \\
 unsigned int \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::get\+Indegree (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption}) const}
 
-
-
-Gets the indegree of the vertex. 
-
-\begin{DoxyReturn}{Returns}
-Indegree of the vertex. 
-\end{DoxyReturn}
 \Hypertarget{class_vertex_a48eae2f7af2362634adab02b7b2dbec6}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!getInfo@{getInfo}}
 \index{getInfo@{getInfo}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{getInfo()}{getInfo()}}
@@ -236,13 +206,6 @@ Information stored in the vertex.
 template$<$class T$>$ \\
 int \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::get\+Low (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption}) const}
 
-
-
-Gets the low value of the vertex. 
-
-\begin{DoxyReturn}{Returns}
-Low value of the vertex. 
-\end{DoxyReturn}
 \Hypertarget{class_vertex_ab2916c006fa35b918910a2232095e785}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!getNum@{getNum}}
 \index{getNum@{getNum}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{getNum()}{getNum()}}
@@ -250,13 +213,6 @@ Low value of the vertex.
 template$<$class T$>$ \\
 int \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::get\+Num (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption}) const}
 
-
-
-Gets the num value of the vertex. 
-
-\begin{DoxyReturn}{Returns}
-Num value of the vertex. 
-\end{DoxyReturn}
 \Hypertarget{class_vertex_a15e4ff95fba2bb5970a6551137ceb950}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!getPath@{getPath}}
 \index{getPath@{getPath}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{getPath()}{getPath()}}
@@ -264,13 +220,6 @@ Num value of the vertex.
 template$<$class T$>$ \\
 \mbox{\hyperlink{class_edge}{Edge}}$<$ T $>$ \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::get\+Path (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption}) const}
 
-
-
-Gets the path edge of the vertex. 
-
-\begin{DoxyReturn}{Returns}
-Path edge of the vertex. 
-\end{DoxyReturn}
 \Hypertarget{class_vertex_ac83e9238e2f4c54b46c77a409f44c769}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!getQueueIndex@{getQueueIndex}}
 \index{getQueueIndex@{getQueueIndex}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{getQueueIndex()}{getQueueIndex()}}
@@ -278,13 +227,6 @@ Path edge of the vertex.
 template$<$class T$>$ \\
 int \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::get\+Queue\+Index (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption}) const}
 
-
-
-Gets the queue index of the vertex. 
-
-\begin{DoxyReturn}{Returns}
-Queue index of the vertex. 
-\end{DoxyReturn}
 \Hypertarget{class_vertex_a2db8aed85b74ff54eb18d0734b6337c4}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!getWalkingDist@{getWalkingDist}}
 \index{getWalkingDist@{getWalkingDist}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{getWalkingDist()}{getWalkingDist()}}
@@ -292,13 +234,6 @@ Queue index of the vertex.
 template$<$class T$>$ \\
 double \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::get\+Walking\+Dist (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption}) const}
 
-
-
-Gets the walking distance of the vertex. 
-
-\begin{DoxyReturn}{Returns}
-Walking distance of the vertex. 
-\end{DoxyReturn}
 \Hypertarget{class_vertex_aaa41dfa4ce1a19b4e529cc6cdc23b764}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!isProcessing@{isProcessing}}
 \index{isProcessing@{isProcessing}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{isProcessing()}{isProcessing()}}
@@ -306,13 +241,6 @@ Walking distance of the vertex.
 template$<$class T$>$ \\
 bool \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::is\+Processing (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption}) const}
 
-
-
-Checks if the vertex is being processed. 
-
-\begin{DoxyReturn}{Returns}
-True if the vertex is being processed, false otherwise. 
-\end{DoxyReturn}
 \Hypertarget{class_vertex_aa2bb17f6ebd98a67f8da1f689b22fadc}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!isVisited@{isVisited}}
 \index{isVisited@{isVisited}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{isVisited()}{isVisited()}}
@@ -320,13 +248,6 @@ True if the vertex is being processed, false otherwise.
 template$<$class T$>$ \\
 bool \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::is\+Visited (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption}) const}
 
-
-
-Checks if the vertex has been visited. 
-
-\begin{DoxyReturn}{Returns}
-True if the vertex has been visited, false otherwise. 
-\end{DoxyReturn}
 \Hypertarget{class_vertex_a5a6670b842354232bac4dad2f551d66e}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!operator$<$@{operator$<$}}
 \index{operator$<$@{operator$<$}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{operator$<$()}{operator<()}}
@@ -372,10 +293,6 @@ True if the edge was removed, false otherwise.
 template$<$class T$>$ \\
 void \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::remove\+Outgoing\+Edges (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
 
-
-
-Removes all outgoing edges from this vertex. This operation has a time complexity of O(\+E), where E is the number of outgoing edges. 
-
 \Hypertarget{class_vertex_ac1061c96d8da11305891e6d2eb7c5f88}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!setDrivingDist@{setDrivingDist}}
 \index{setDrivingDist@{setDrivingDist}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{setDrivingDist()}{setDrivingDist()}}
@@ -383,15 +300,6 @@ Removes all outgoing edges from this vertex. This operation has a time complexit
 template$<$class T$>$ \\
 void \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::set\+Driving\+Dist (\begin{DoxyParamCaption}\item[{double}]{dd}{}\end{DoxyParamCaption})}
 
-
-
-Sets the driving distance of the vertex. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em dd} & Driving distance to set. \\
-\hline
-\end{DoxyParams}
 \Hypertarget{class_vertex_af9c4caaac19bdaae5a88a7a671639b59}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!setIndegree@{setIndegree}}
 \index{setIndegree@{setIndegree}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{setIndegree()}{setIndegree()}}
@@ -399,31 +307,13 @@ Sets the driving distance of the vertex.
 template$<$class T$>$ \\
 void \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::set\+Indegree (\begin{DoxyParamCaption}\item[{unsigned int}]{indegree}{}\end{DoxyParamCaption})}
 
-
-
-Sets the indegree of the vertex. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em indegree} & Indegree to set. \\
-\hline
-\end{DoxyParams}
 \Hypertarget{class_vertex_a31cd60c26640f8072a928ba70eb2f95e}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!setInfo@{setInfo}}
 \index{setInfo@{setInfo}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{setInfo()}{setInfo()}}
 {\footnotesize\ttfamily \label{class_vertex_a31cd60c26640f8072a928ba70eb2f95e} 
 template$<$class T$>$ \\
-void \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::set\+Info (\begin{DoxyParamCaption}\item[{T}]{in}{}\end{DoxyParamCaption})}
+void \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::set\+Info (\begin{DoxyParamCaption}\item[{T}]{info}{}\end{DoxyParamCaption})}
 
-
-
-Sets the information stored in the vertex. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em in} & Information to store in the vertex. \\
-\hline
-\end{DoxyParams}
 \Hypertarget{class_vertex_a62acec2c4fcbec56e995974b91444ec9}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!setLow@{setLow}}
 \index{setLow@{setLow}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{setLow()}{setLow()}}
@@ -431,15 +321,6 @@ Sets the information stored in the vertex.
 template$<$class T$>$ \\
 void \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::set\+Low (\begin{DoxyParamCaption}\item[{int}]{value}{}\end{DoxyParamCaption})}
 
-
-
-Sets the low value of the vertex. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em value} & Low value to set. \\
-\hline
-\end{DoxyParams}
 \Hypertarget{class_vertex_ab3f9026ba6cbd11243ab484a856c6581}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!setNum@{setNum}}
 \index{setNum@{setNum}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{setNum()}{setNum()}}
@@ -447,15 +328,6 @@ Sets the low value of the vertex.
 template$<$class T$>$ \\
 void \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::set\+Num (\begin{DoxyParamCaption}\item[{int}]{value}{}\end{DoxyParamCaption})}
 
-
-
-Sets the num value of the vertex. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em value} & Num value to set. \\
-\hline
-\end{DoxyParams}
 \Hypertarget{class_vertex_a5ebf4b550ec94b89a8f80df1a53cc97d}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!setPath@{setPath}}
 \index{setPath@{setPath}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{setPath()}{setPath()}}
@@ -463,15 +335,6 @@ Sets the num value of the vertex.
 template$<$class T$>$ \\
 void \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::set\+Path (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{class_edge}{Edge}}$<$ T $>$ \texorpdfstring{$\ast$}{*}}]{path}{}\end{DoxyParamCaption})}
 
-
-
-Sets the path edge of the vertex. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em path} & Path edge to set. \\
-\hline
-\end{DoxyParams}
 \Hypertarget{class_vertex_a5ccb6f7215c915afdbcbdb81ad70a408}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!setProcessing@{setProcessing}}
 \index{setProcessing@{setProcessing}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{setProcessing()}{setProcessing()}}
@@ -479,15 +342,6 @@ Sets the path edge of the vertex.
 template$<$class T$>$ \\
 void \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::set\+Processing (\begin{DoxyParamCaption}\item[{bool}]{processing}{}\end{DoxyParamCaption})}
 
-
-
-Sets the processing status of the vertex. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em processing} & Processing status to set. \\
-\hline
-\end{DoxyParams}
 \Hypertarget{class_vertex_a25c8a30731d8c1bfa3253f0688819820}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!setQueueIndex@{setQueueIndex}}
 \index{setQueueIndex@{setQueueIndex}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{setQueueIndex()}{setQueueIndex()}}
@@ -495,15 +349,6 @@ Sets the processing status of the vertex.
 template$<$class T$>$ \\
 void \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::set\+Queue\+Index (\begin{DoxyParamCaption}\item[{int}]{idx}{}\end{DoxyParamCaption})}
 
-
-
-Sets the queue index of the vertex. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em idx} & Queue index to set. \\
-\hline
-\end{DoxyParams}
 \Hypertarget{class_vertex_a95a3f3c55f2ba371fae51d3fe0e76c23}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!setVisited@{setVisited}}
 \index{setVisited@{setVisited}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{setVisited()}{setVisited()}}
@@ -511,15 +356,6 @@ Sets the queue index of the vertex.
 template$<$class T$>$ \\
 void \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::set\+Visited (\begin{DoxyParamCaption}\item[{bool}]{visited}{}\end{DoxyParamCaption})}
 
-
-
-Sets the visited status of the vertex. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em visited} & Visited status to set. \\
-\hline
-\end{DoxyParams}
 \Hypertarget{class_vertex_a8b06e527931e3c29f5ee5e04623dfe04}\index{Vertex$<$ T $>$@{Vertex$<$ T $>$}!setWalkingDist@{setWalkingDist}}
 \index{setWalkingDist@{setWalkingDist}!Vertex$<$ T $>$@{Vertex$<$ T $>$}}
 \doxysubsubsection{\texorpdfstring{setWalkingDist()}{setWalkingDist()}}
@@ -527,15 +363,6 @@ Sets the visited status of the vertex.
 template$<$class T$>$ \\
 void \mbox{\hyperlink{class_vertex}{Vertex}}$<$ T $>$\+::set\+Walking\+Dist (\begin{DoxyParamCaption}\item[{double}]{wd}{}\end{DoxyParamCaption})}
 
-
-
-Sets the walking distance of the vertex. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em wd} & Walking distance to set. \\
-\hline
-\end{DoxyParams}
 
 
 \doxysubsection{Friends And Related Symbol Documentation}
